--- a/index.html
+++ b/index.html
@@ -7,8 +7,55 @@
     <title>Campo fiorito</title>
     <!-- CSS -->
     <link rel="stylesheet" href="./css/style.css">
+    <!-- FONTAWESOME -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+
+    <!-- testa della pagina -->
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="col-left">
+                    <div class="card">
+                        <img src="./img/mobile-logo.png" alt="Logo">
+                        <h1>Campo Minato</h1>
+                    </div>
+                </div>
+                <div class="col-right">
+                    <div class="card">
+                        <button class="font-size-md" id="play">Play</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    
+    <!-- corpo della pagina -->
+    <main>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="card">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <!-- fondo della pagina -->
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="card">
+                        <div class="font-size-lg">Made with <i class="fa-solid fa-heart"></i> by <a class="font-size-lg" href="#">Boolean</a></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     <!-- JAVASCRIPT -->
     <script type="text/javascript" src="./js/script.js"></script>
 </body>
