Added select difficulty in html

--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
                 </div>
                 <div class="col-right">
                     <div class="card">
+                        <div class="form-select">
+                            <label class="font-size-lg" for="difficulty">Difficoltà:</label>
+                            <select class="font-size-md" name="difficulty" id="difficulty">
+                                <option value="hard">Hard</option>
+                                <option value="normal">Normal</option>
+                                <option value="easy">Easy</option>
+                            </select>
+                        </div>
                         <button class="font-size-md" id="play">Play</button>
                     </div>
                 </div>
@@ -37,7 +45,7 @@
             <div class="row">
                 <div class="col">
                     <div id="container-div" class="card">
-
+                        <!-- inseriti i div class="square" tramite javascript -->
                     </div>
                 </div>
             </div>
